# cloudpedagogy-course-engine

./: .ci-rerun.txt  .gitignore  CHANGELOG.md  INSTRUCTIONS.md  NOTICE.md  PROJECT_SPEC.md  README.md  bootstrap.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
demo/docs/: common-validation-errors.md
demo/examples/: README.md  course.minimal.yml  course.scenario-planning.yml  course.template.yml
demo/scenario-planning-environmental-scanning/: course.generated.yml  course.yml
demo/tmp.course.yml/: course.yml
docs/: ADOPTING_IN_AN_INSTITUTION.md  END_USER_INSTRUCTIONS.md  POLICY_FILES.md  course-builder-design-rationale.md  course-builder-handbook.md  course-engine-design-rationale.md  course-engine-handbook.md  explainability-json-contract.md  v1.21.0-design.md  v1.4-design.md  v1.5-design.md  v1.7-design.md  v1.8-design.md  v_1_7_acceptance_criteria.md
docs/acceptance/: v1.13.0-acceptance_criteria.md  v1.13.0-implementation_checklist.md
docs/design/: v1.1.0-design.md  v1.10.0-design  v1.12.0-design.md  v1.13.0-absence-signals.md  v1.13.0-design.md  v1.13.1-ai-scoping.md  v1.18.0-design.md  v1.18.0-pack-profiles.md  v1.21.0-design.md  v1.6.0-design.md  v1.8.0-design.md
docs/handbook/: course-builder-design-rationale.docx  course-engine-design-rationale.docx  course-engine-handbook.docx
docs/releases/: v1.10.0.md  v1.17.0.md
examples/policies/: example-policy.yml
examples/sample-course/: course.yml
packs/scenario-planning-audit/: README.txt  explain.json  explain.txt  manifest.json  pack_manifest.json  report.json  (+2 more)
scripts/: build_handbooks.sh  make_course_yml_from_lessons.py  smoke_test.sh  split_lessons.py  verify-release.sh
templates/: _handout_pdf_quarto.yml.j2  _handout_quarto.yml.j2  _quarto.yml.j2  handout_index.qmd.j2  index.qmd.j2  lesson.qmd.j2  lessons_index.qmd.j2
tests/:  test_profile_resolution.py  test_build.py  test_capability_mapping.py  test_check_json.py  test_explain_dist_dir.py  test_explain_dist_signals.py  test_explain_json.py  test_explain_text.py  test_html_single.py  test_markdown_export.py  test_pack_packer_mvp.py  test_pack_profiles.py  test_policy_loading.py  test_presets.py  test_report.py  test_schema.py  test_snapshot_determinism.py  test_validate_cli_v14.py  test_validate_policy_integration.py
(+57 files in other folders)
