[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "course-engine"
version = "1.8.1"
description = "A Python-first, Quarto-backed course production engine for reproducible, auditable, and governance-aware course design."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Jonathan Wong (CloudPedagogy)" }
]

dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "jinja2>=3.1.3",
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Topic :: Education",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://www.cloudpedagogy.com/"
Repository = "https://github.com/cloudpedagogy/cloudpedagogy-course-engine"
Issues = "https://github.com/cloudpedagogy/cloudpedagogy-course-engine/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
course-engine = "course_engine.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
